--- a/src/components/LoginComponent/LoginComponent.scss
+++ b/src/components/LoginComponent/LoginComponent.scss
@@ -5,11 +5,10 @@
     justify-content: center;
     align-items: center;
     margin-top: 60px;
-    background-color: #fefbf5;
     padding: 20px;
     margin-left: 20%;
     margin-right: 20%;
-
+    background-color: #f3f3f3;
 
     input{
         padding: 10px;
@@ -19,12 +18,24 @@
         margin-top: 30px;
     }
 
+    p{
+        font-size: 16px;
+        font-weight: 600;
+        color: #46535e;
+    }
+    input{
+        font-size: 14px;
+        font-weight: 500;
+        color: #46535e;
+        border-radius: 3px;
+    }
     button{
         padding: 10px;
         color: #fff;
-        background-color: #0f62fe;
         border: 1px solid transparent;
         width: 154px;
+        background: #9c0;
+        border: 1px solid #9c0;
         cursor: pointer;
     }
 }
